# cache-tool317

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_OVERVIEW.md  REPORT_CACHE_READER_INVESTIGATION.md  REPORT_CLIENT_RESET_BASE.md  REPORT_DEBUG_VIEWER_STABILIZATION.md  REPORT_TRIANGLE_RENDER.md  REPORT_WIREFRAME_MESH_RENDERER.md  WORKFLOW.md  texture_0.ppm  texture_1.ppm  texture_10.ppm  texture_2.ppm  texture_5.ppm
client/: CMakeLists.txt  DebugModelViewer.h
client/include/: App.h  DebugModelViewer.h  Mat4.h  Mesh.h  ModelRenderer.h  Point2D.h  Renderable.h  Renderer3D.h  Shader.h  TextureLoader.h  Triangle.h  Vertex.h  WireframeMeshRenderer.h
client/src/: App.cpp  AppMode.h  Camera.cpp  Camera.h  ClientApp.cpp  ClientApp.h  DebugModelViewer.cpp  Mat4.cpp  Math.h  Mesh.cpp  ModelRenderer.cpp  ModelRenderer.h  Renderer3D.cpp  Shader.cpp  Shader.h  TextureLoader.cpp  TextureManager.cpp  TextureManager.h  WireframeMeshRenderer.cpp  WorldRenderer.cpp  WorldRenderer.h  main.cpp
core/: CMakeLists.txt
core/include/: Archive.h  ArchiveNames.h  Buffer.h  CacheDefinitions.h  CacheReader.h  DefinitionsLoader.h  FloDef.h  IdkDef.h  ItemDef.h  LocDef.h  MapObjects.h  MapRegion.h  MapTerrain.h  MesAnimDef.h  MesDef.h  Model.h  ModelDef.h  NpcDef.h  ParamDef.h  RegionRenderer2D.h  SeqDef.h  SpotAnimDef.h  TextureDef.h  Utils.h  VarbitDef.h  VarpDef.h  VersionList.h
core/src/: Archive.cpp  Buffer.cpp  BufferBenchmark.cpp  CacheBenchmark.cpp  CacheReader.cpp  DefinitionsLoader.cpp  FloDef.cpp  IdkDef.cpp  ItemDef.cpp  LocDef.cpp  MapObjects.cpp  MapRegion.cpp  MapTerrain.cpp  MesAnimDef.cpp  MesDef.cpp  Model.cpp  ModelDef.cpp  NpcDef.cpp  ParamDef.cpp  RegionRenderer2D.cpp  SeqDef.cpp  SpotAnimDef.cpp  TextureDef.cpp  VarbitDef.cpp  VarpDef.cpp  VersionList.cpp  core.cpp
docs/: adding-parsers.md  algorithms.md  architecture.md  cache-format.md  conventions.md  history.md
tool/: CMakeLists.txt
tool/src/: main.cpp
